--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@fullpage/react-fullpage": "^0.1.42",
     "@gsap/react": "^2.1.0",
     "@reduxjs/toolkit": "^2.1.0",
+    "@shinyongjun/react-fullpage": "^1.9.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.2",
+    "firebase": "^10.8.0",
     "framer-motion": "^11.0.5",
     "gsap": "^3.12.5",
     "localforage": "^1.10.0",
